8-19, Program Settings (addtl offer), "Users are unable to delete a saved Additional Offer Setting (AKX Additional Offer Settings 1)" Worked on Ad Hoc issues. Spent time experimenting with unfamiliar Marcom settings. Reached out to Robin at Marcom and Todd Duncan for help and information to fix the Ad Hoc email template bugs. Email Template Adjustments: - Remove "Unsubscribe" as a visible field Finished - Remove "Copyright" as a visible field Finished - In Email 3, disable the rich text editor on "Code 1" Finished Made adjustments to Content Preview styles: adjusted store hours, font sizes, etc. Removed runtime debugging from production codebase. Fixed an issue where targeted stores in programManagement.js was using $j instead of $ for jQuery. Fix an error caused when subscription less than 1 was passed to setStoreSubscription API.

--- a/marcom/css/catalog.css
+++ b/marcom/css/catalog.css
@@ -7,6 +7,9 @@
 .btn-s-green, .btn-s-green:hover {
   background-position: right -769px
 }
+.Minimum {
+  visibility: hidden;
+}
 #qtip-blanket, .qtip, .qtip> * {
   display: none !important;
 }
